# tongue-doctor

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  RK3588.cmake
cmake/: common.cmake  git_info.cmake  lib_symlink.cmake
python/: convert.py  createhsv.py  hsvdetect.py  tongue.yaml
src/: CMakeLists.txt  camera_notifier.cc  camera_notifier.h  camera_reader.cc  camera_reader.h  llm_controller.cc  llm_controller.h  llm_demo.cpp  main.cc  model_manager.cc  model_manager.h  postprocess.cc  postprocess.h  yolo_controller.cc  yolo_controller.h
src/logger/: logger.cc  logger.h  logger_impl.cc  logger_impl.h
src/rknpu1/: yolov7.cc
src/rknpu2/: yolov7.cc
src/view/: color_define.h  event_code.h  main_view.cc  main_view.h  qrcode_dlg.cc  qrcode_dlg.h  user_info_dlg.cc  user_info_dlg.h  view_msg.h
utils/: image_utils.c
